fix text overlapping the image

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
     margin: 10px 0px;
 }
 h2 {
-    font-size: 38px;
+    font-size: 36px;
     font-weight: 300;
     margin: 10px 0px;
 }
